--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -1,3 +1,4 @@
 build_script:
   - set PATH=C:\projects\bugs;C:\msys64;C:\msys64\mingw64\bin;C:\msys64\usr\local\bin;C:\msys64\usr\bin;%PATH%
-  - C:\msys64\msys2_shell.cmd -defterm -mingw64 -no-start -here -lc "sh C:/projects/ween/ocean_man.sh"
+  - C:\msys64\msys2_shell.cmd -defterm -mingw32 -no-start -here -lc "sh C:/projects/ween/build.sh"
+  - C:\msys64\msys2_shell.cmd -defterm -mingw64 -no-start -here -lc "sh C:/projects/ween/build.sh"
